Fix theme picker header alignment and add docs

--- a/packages/layout/src/components/es-theme-picker/es-theme-picker.css
+++ b/packages/layout/src/components/es-theme-picker/es-theme-picker.css
@@ -9,7 +9,7 @@
 
 h1 {
     font-size: 14px;
-    margin-top: 0;
+    margin: 0;
 }
 
 form {
@@ -45,24 +45,19 @@ label {
     }
 }
 
-h1 {
-    display: inline-block;
-}
-
-.field {
+.auto {
     outline: none;
     border: none;
-    display: inline-flex;
+    display: flex;
     background-color: transparent;
     align-items: center;
     justify-content: center;
     cursor: pointer;
-    font-family: inherit;
+    font: inherit;
     font-size: 14px;
+    color: inherit;
     margin-left: auto;
-    padding-bottom: 10px;
-    color: white;
-
+    padding: 0;
     &.checked {
         & .switch {
             color: var(--color-layout-highlight);
@@ -131,14 +126,14 @@ span {
     vertical-align: middle;
 }
 
-.selection-wrapper {
+.selection_wrapper {
     display: inline-flex;
     padding-top: 5px;
     align-items: center;
 }
 
-.header-wrapper {
-    display: flex;
-    padding-bottom: 10px;
+.header_wrapper {
+    padding-bottom: 17px;
     align-items: center;
+    display: flex;
 }
